# Trabajo_DI

./: .gitignore  .readthedocs.yaml  README.md  database_setup.py  inventario.db  main.py  pyproject.toml
Documentacion/: README_REORGANIZACION.md  diagramaClases.mmd  diagramaSecuencia.mmd
Enunciado/: Enunciado.md
Sphinx/@Documentacion/source/: api_reference.rst  conf.py  make.bat  tutorial.rst
Sphinx/@Documentacion/source/_build/: .buildinfo  api_reference.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorial.html
Sphinx/@Documentacion/source/_build/.doctrees/: api_reference.doctree  environment.pickle  index.doctree  tutorial.doctree
Sphinx/@Documentacion/source/_build/_modules/: index.html
Sphinx/@Documentacion/source/_build/_sources/: index.rst.txt
Sphinx/@Documentacion/source/_build/guias/: 01_comandos_usados.html  02_configuracion_y_archivos.html  03_guia_desde_cero.html
Sphinx/@Documentacion/source/guias/: 02_configuracion_y_archivos.rst
Sphinx/src/mi_libreria/: calculadora.py
docs/: make.bat  requirements.txt
docs/source/: api_reference.rst  conf.py  index.rst
docs/source/guias/: 01_instalacion_y_uso.rst  02_arquitectura.rst
gui/: form_dialog.py  main_window.py
src/gestor_inventario/: __init__.py  configuracionBD.py  main.py  utils.py
src/gestor_inventario/gui/: dialogoFormulario.py  styles.css  ventanaCategorias.py  ventanaPrincipal.py
src/gestor_inventario/mi_libreria/: conexionBD.py
src/mi_libreria/: conexionBD.py
tests/: test_conexionbd.py  test_form_dialog_validation.py
(+6 files in other folders)
