[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gestor-inventario-samuel"
version = "2.2"
description = "Un gestor de inventario creado con GTK3 y SQLite."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
     "PyGObject",
]

[project.urls]
"Homepage" = "https://github.com/shermidagre/Trabajo_DI"
"Documentation" = "https://gestor-inventario.readthedocs.io/"

[project.scripts]
xestor-inventario = "gestor_inventario.main:iniciar"

[tool.hatch.build.targets.wheel]
packages = ["src/gestor_inventario"]
